--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl-PL">
 <head>
     <meta charset="UTF-8">
-    <title>CodersLab</title>
+    <title>Walking Dead Game</title>
     <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
